style.css
@media (min-width: 1000px) {
    /*
     * (What’s happening, Who to follow, Topics to follow) elements in each languages supported by the extension
     */
    [aria-label="Timeline: Trending now"],
    [aria-label="Who to follow"],
    [aria-label="Timeline: Aktuelle Trends"],
    [aria-label="Wem folgen?"],
    [aria-label="الخطّ الزمنيّ: المتداوَل الآن"],
    [aria-label="اقتراحات المتابعة"],
    [aria-label="Oś czasu: Aktualne trendy"],
    [aria-label="Warci obserwowania"],
    [aria-label="Timeline: Assuntos do momento"],
    [aria-label="Quem seguir"],
    [aria-label="タイムライン: トレンド"],
    [aria-label="おすすめユーザー"],
    [aria-label="الخطّ الزمنيّ: "],
    [aria-label="Tidslinje: På uppgång nu"],
    [aria-label="Rekommenderade konton"],
    [aria-label="Timeline: "] {
        display: none !important;
        background-color: inherit !important;
        border: none !important;
        height: 0 !important;
        width: 0 !important;
    }

    /* timeline column, default value is 600px */
    .r-1ye8kvj {
        max-width: 715px !important;
    }

    /* sidebar column, default value is 350px */
    .r-1hycxz {
        max-width: 250px !important;
    }
}

